apps/f1-frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f1-frontend
  namespace: f1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: f1-frontend
  template:
    metadata:
      labels:
        app: f1-frontend
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: f1-frontend
          image: ghcr.io/pestana1213/f1-app
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
