apps/f1-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f1-frontend-service
  namespace: f1
spec:
  selector:
    app: f1-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
