apps/f1-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f1-frontend-ingress
  namespace: f1
spec:
  rules:
    - host: f1.golias.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: f1-frontend-service
                port:
                  number: 80
